# qa_guru_hw14_poetry

./: README.md  pyproject.toml
poetry_project/: pyproject.toml
